# valdemo

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  api.py  main.py
app/engine/: __init__.py  abilities.py  ai.py  combat.py  content.py  economy.py  game.py  grid.py  movement.py  schema.py
fps-arena/: .gitignore  Makefile  README.md  package.json  pyproject.toml
fps-arena/server/: __init__.py  main.py
fps-arena/static/: index.html  style.css
fps-arena/static/src/: autoplay.js  enemy.js  game.js  hud.js  main.js  player.js  world.js
fps-arena/static/src/engine/: ai.js  combat.js  rng.js  vecmath.js  waves.js
fps-arena/tests/backend/: test_scores.py
fps-arena/tests/e2e/: record_demo.py  test_play_e2e.py
fps-arena/tests/unit/: ai.test.js  combat.test.js  rng.test.js  vecmath.test.js  waves.test.js
scripts/: record_demo.py
static/: game.js  index.html  style.css
tactical_shooter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_abilities.py  test_ai.py  test_api.py  test_combat.py  test_economy.py  test_flow.py  test_grid_los.py  test_invariants.py  test_movement.py
tests/e2e/: test_demo_e2e.py
