[project]
name = "tactical-shooter"
version = "0.1.0"
description = "A deterministic turn-based tactical shooter versus bots"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "playwright>=1.44",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=app/engine --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
