[project]
name = "fps-arena"
version = "1.0.0"
description = "Browser first-person wave survival shooter"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pytest>=8.2",
  "playwright>=1.44",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
packages = ["server"]
